# OpenDB_ETL_server

./: .dockerignore  .gitignore  .htpasswd  README.md  celery_worker.py  docker-compose.yml  dockerfile  expose_ngrok.py  main.py  main2.py  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ADD_NEW_MODULE_GUIDE.md  FACEBOOK_FIELDS_CHEATSHEET.md  FACEBOOK_FIELD_CONFIGURATION_GUIDE.md  README.md
experiment/: test.py
experiment.py/: fetch_campaign_data.py  fetch_product_data.py  test.py  test2.py
models/: schemas.py
scripts/: test_currency_exchange.py
services/: exceptions.py
services/currency/: exchange_rate_service.py
services/dashboard/: dashboard_service.py
services/database/: mongo_client.py
services/facebook/: base_processor.py  breakdown_processor.py  constant.py  daily_processor.py  daily_processor2.py  generic_processor.py
services/facebook/err_handler/: rate_limit.py
services/gmv/: campaign_creative_detail.py  campaign_product_detail.py  gmv_reporter.py
services/sheet_writer/: gg_sheet_writer.py
static/: index.html  script.js  style.css
tests/unit/: test_rate_limit.py
tiktok/gmv/: campaign_creative.py  campaign_product.py
utils/: utils.py
workers/: base_report_worker.py  facebook_ads_worker.py  tasks_modular.py  tiktok_gmv_worker.py  worker_factory.py
