[project]
name = "tiktok-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.2",
    "gunicorn>=23.0.0",
    "python-json-logger>=3.3.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.36.0",
]
